Fix Java 9 Warnings (#43)