@@ -131,7 +131,7 @@ public class ByteIdentity extends SingleFieldIdentity {
      * @since 2.0
      */
     protected Object createKeyAsObject() {
-        return new Byte(key);
+        return Byte.valueOf(key);
     }
 
     /** Write this object. Write the superclass first.
