@@ -150,7 +150,7 @@ public class ConcurrentPersistenceManagersSameClasses extends PersistenceManager
         Query q = pm.newQuery (PCPoint.class);
         q.declareParameters ("int px, int py");
         q.setFilter ("x == px & y == py");
-        Collection results = (Collection)q.execute (new Integer(x), new Integer(y));
+        Collection results = (Collection)q.execute (Integer.valueOf(x), Integer.valueOf(y));
         Iterator it = results.iterator();
         PCPoint ret = (PCPoint)it.next();
         return ret;
