@@ -69,9 +69,9 @@ public class AfterCloseSetMethodsThrowException extends JDO_Test {
         Class[] objectParameters = new Class[]{Object.class};
         Class[] integerParameters = new Class[]{Integer.class};
         Object[] stringParameter = new Object[]{"Nobody knows the trouble"};
-        Object[] booleanParameter = new Object[]{new Boolean(false)};
+        Object[] booleanParameter = new Object[]{Boolean.FALSE};
         Object[] objectParameter = new Object[]{null};
-        Object[] integerParameter = new Object[]{new Integer(0)};
+        Object[] integerParameter = new Object[]{Integer.valueOf(0)};
         
         SetProperty[] setMethods = new SetProperty[] {
             new SetProperty("setConnectionDriverName", stringParameters, stringParameter),
