@@ -45,7 +45,7 @@ public class VersionedPCPoint implements Serializable {
 
     public VersionedPCPoint(int x, int y) {
         this.x = x;
-        this.y = new Integer(y);
+        this.y = Integer.valueOf(y);
     }
 
     public VersionedPCPoint(int x, Integer y) {
