@@ -39,7 +39,7 @@ public class PCPointSingleFieldShort extends AbstractPCPointSingleField {
     /**
      * The primary key field.
      */
-    private Short id = new Short(newId());
+    private Short id = Short.valueOf(newId());
 
     public int x;
     public Integer y;
@@ -64,7 +64,7 @@ public class PCPointSingleFieldShort extends AbstractPCPointSingleField {
      */
     public PCPointSingleFieldShort(int x, int y) {
         this.x = x;
-        this.y = new Integer(y);
+        this.y = Integer.valueOf(y);
     }
 
     public void setX(int x) {
